--- a/src/net/makefile
+++ b/src/net/makefile
@@ -9,31 +9,26 @@
 
 # 1.CONFIG
 DEBUG 		:= YES
-APP			:= server
-APP_OUT		:= server
+APP			:= libnet
+APP_OUT		:= libnet.so
 ROOT_DIR	:= ../..
-PROJ_DIR	:= ..
+PROJECT_DIR := ..
 OUT_DIR		:= $(ROOT_DIR)/bin
 DEFS_DIR	:= 
-INCS_DIR	:= -I$(ROOT_DIR)/include \
-			   -I$(PROJ_DIR)/helper	\
-			   -I$(PROJ_DIR)/common
+INCS_DIR	:= -I$(ROOT_DIR)/include
 LIBS_DIR	:= $(ROOT_DIR)/lib
 LIBS		:= -ldl -lpthread \
 			   -L$(LIBS_DIR)/ -lhelper
-VPATH       := $(PROJ_DIR)/common
-RAW_SRCS	:= $(wildcard *.c) $(wildcard *.cpp) \
-			   $(wildcard $(PROJ_DIR)/common/*.cpp) $(wildcard $(PROJ_DIR)/common/*.c)
+RAW_SRCS	:= $(wildcard *.cpp) $(wildcard *.c)
 
 # 2.TOOL CHAIN
 CXX				:= g++
-COMMON_FLAGS	:= -g -std=c++11
+COMMON_FLAGS	:= -g
 CXX_FLAGS		:= $(COMMON_FLAGS)
 MKDIR_P     	:= mkdir -p
 CP          	:= cp
 RM				:= rm
 INSTALL			:= $(CP)
-EXPORET			:= $(CP)
 
 ifeq ($(DEBUG), YES)
     OBJ_DIR		:= Debug
@@ -71,16 +66,16 @@ cleanall: clean cleaninstall
 $(OBJ_DIR)/%.o : %.cpp
 	$(info creating $@ ...)
 	@$(MKDIR_P) $(OBJ_DIR) ..
-	$(CXX) -c $(CXXFLAGS) $(INCS_DIR) $< -o $@
-
+	$(CXX) -c -fPIC $(CXXFLAGS) $(INCS_DIR) $< -o $@
+	
 $(OBJ_DIR)/%.o : %.c
 	$(info creating $@ ...)
 	@$(MKDIR_P) $(OBJ_DIR) ..
-	$(CXX) -c $(CXXFLAGS) $(INCS_DIR) $< -o $@
+	$(CXX) -c -fPIC $(CXXFLAGS) $(INCS_DIR) $< -o $@
 
 $(OBJ_DIR)/$(APP_OUT): $(OBJS)
 	$(info linking ...)
-	$(CXX) $(CXX_FLAGS) -o $(OBJ_DIR)/$(APP_OUT) $(OBJS) $(LIBS)
+	$(CXX) -shared $(CXX_FLAGS) -o $(OBJ_DIR)/$(APP_OUT) $(OBJS) $(LIBS)
 
 $(OUT_DIR)/$(APP_OUT): $(OBJ_DIR)/$(APP_OUT)
 	$(info installing ...)
