--- a/src/server/makefile
+++ b/src/server/makefile
@@ -21,7 +21,7 @@ INCS_DIR	:= -I$(ROOT_DIR)/include \
 LIBS_DIR	:= $(ROOT_DIR)/lib
 LIBS		:= -ldl -lpthread \
 			   -L$(LIBS_DIR)/ -lhelper
-VPATH       := $(PROJ_DIR)/common
+# VPATH       := $(PROJ_DIR)/common
 RAW_SRCS	:= $(wildcard *.c) $(wildcard *.cpp)
 			   #$(wildcard $(PROJ_DIR)/common/*.cpp) $(wildcard $(PROJ_DIR)/common/*.c)
 
